<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">terrysTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">send</string>
    <string name="edit_message">enter messsage</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_start_round">StartRound</string>
    <string name="title_activity_player_select">PlayerSelect</string>
    <string name="next">Next</string>
    <string name="new_player">New Player</string>
    <string name="title_activity_new_player">NewPlayer</string>
    <string name="name">Name</string>
    <string name="handicap">Handicap</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="button_start_round">Start Round</string>
    <string name="julia">Julia</string>
    <string name="title_activity_course_select">CourseSelect</string>
    <string name="newCourse">New Course</string>
    <string name="title_activity_play_round">PlayRound</string>
    <string name="holeNumber">Hole number: 1</string>
    <string name="par">Par</string>
    <string name="SI">the SI for this hole is: 10</string>
    <string name="left">left</string>
    <string name="straight">straight</string>
    <string name="right">right</string>
    <string name="shots">Shots</string>
    <string name="putts">Putts</string>
    <string name="menu_add">test test test</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="delete">Delete</string>
    <string name="strokeIndex">Stroke Index</string>
    <string name="whiteYardage">White Tee</string>
    <string name="yellowYardage">yellow Tee</string>
    <string name="blueYardage">Blue Tee</string>
    <string name="redYardage">Red Tee</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="title_activity_new_course">NewCourse</string>
    <string name="recordShotDirection">Record Tee Shot Direction</string>
    <string name="config">App Configuration</string>

    <string-array name="shots">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="PlayerMenu">
        <item>Edit Player</item>
        <item>Delete Player</item>
    </string-array>

    <string name="title_activity_golfapp_configuration">GolfAppConfiguration</string>
    <string name="title_activity_view_score_card">ViewScoreCard</string>

</resources>