<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/holeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/hello_world"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_below="@+id/holeNumber"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <RelativeLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center" >

                <TextView
                    android:id="@+id/par"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editPar"
                    android:layout_alignParentStart="true"
                    android:text="@string/par" />

                <EditText
                    android:id="@+id/editPar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="number" >
                </EditText>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout1"
                android:gravity="center" >

                <TextView
                    android:id="@+id/strokeIndex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editStrokeIndex"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/strokeIndex" />

                <EditText
                    android:id="@+id/editStrokeIndex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout2"
                android:gravity="center" >

                <TextView
                    android:id="@+id/whiteYardage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editWhiteYardage"
                    android:layout_alignParentStart="true"
                    android:text="@string/whiteYardage" />

                <EditText
                    android:id="@+id/editWhiteYardage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout3"
                android:gravity="center" >

                <TextView
                    android:id="@+id/yellowYardage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editYellowYardage"
                    android:layout_alignParentStart="true"
                    android:text="@string/yellowYardage" />

                <EditText
                    android:id="@+id/editYellowYardage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout4"
                android:gravity="center" >

                <TextView
                    android:id="@+id/blueYardage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editBlueYardage"
                    android:layout_alignParentStart="true"
                    android:text="@string/blueYardage" />

                <EditText
                    android:id="@+id/editBlueYardage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout5"
                android:gravity="center" >

                <TextView
                    android:id="@+id/redYardage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editRedYardage"
                    android:layout_alignParentStart="true"
                    android:text="@string/redYardage" />

                <EditText
                    android:id="@+id/editRedYardage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:ems="10"
                    android:inputType="number" />
            </RelativeLayout>

            <requestFocus />

            <LinearLayout
                android:id="@+id/layout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout6"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                tools:context="${relativePackage}.${activityClass}" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:onClick="previousHole"
                    android:text="@string/previous" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:onClick="deleteHole"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:onClick="addHole"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:onClick="nextHole"
                    android:text="@string/next" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout7"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                tools:context="${relativePackage}.${activityClass}" >

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:onClick="saveCourse"
                    android:text="@string/save" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>